<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">4-Player Chess</string>
    <string name="achievements">Achievements</string>
    <string name="reload">Reload</string>
    <string name="mode1">2-player, standard chess board</string>
    <string name="mode2">2-player, extended board</string>
    <string name="mode3">4-player in 2 teams</string>
    <string name="mode4">4-player, no teams</string>
    <string name="theirturn">Their turn:</string>
    <string name="yourturn">Your turn:</string>
    <string name="localmatches">Local matches:</string>
    <string name="history">Match history</string>
    <string name="newgame">Start new game</string>
    <string name="localgame">Local game</string>
    <string name="gameover">Game Over!\n</string>
    <string name="win">Congratulation, you\'ve won the match!</string>
    <string name="loss">Sorry, you\'ve lost the match!</string>
    <string name="winlocal">Congratulation %s, you\'ve won the match!</string>
    <string name="deletematch">Do you really want to delete this match?</string>
    <string name="leavematch">Do you really want to leave this match?</string>
</resources>
